--- a/ხარება.mw
+++ b/ხარება.mw
@@ -1,4 +1,4 @@
-'''ხარება''', ქრისტიანულ ეკლესიაში ერთ-ერთი საუფლო დღესასწაული (უძრავი), აღინიშნება [[25 მარტი|25 მარტს]] ძველი სტილით ([[7 აპრილი]] ახალი სტილით). სახარების (ლუკა 1,28-35) მიხედვით, გაბრიელ მტავარანგელოზს უხარებია მარიამ ღვთისმშობლისათვის, რომ მისგან იშვებოდა იესო ქრისტე, ძე ღვთისა. 
+'''ხარება''', [[ქრისტიანობა|ქრისტიანულ]] ეკლესიაში ერთ-ერთი საუფლო დღესასწაული (უძრავი), აღინიშნება [[25 მარტი|25 მარტს]] ძველი სტილით ([[7 აპრილი]] ახალი სტილით). [[სახარება|სახარების]] (ლუკა 1,28-35) მიხედვით, [[გაბრიელ მთავარანგელოზი|გაბრიელ მთავარანგელოზს]] უხარებია [[მარიამ ღვთისმშობელი|მარიამ ღვთისმშობლისათვის]], რომ მისგან იშვებოდა [[იესო ქრისტე]], ძე [[ღმერთი|ღვთისა]]. 
 
 
 ქრისტოლოგიაში ხარება მიჩნეულია კაცობრიობის ხსნის დასაბამად, საუკუნეებით დაფარული ღვთის საიდუმლოს გამოცხადებად და სხვა.
