--- a/ხარება.mw
+++ b/ხარება.mw
@@ -1,3 +1,4 @@
+[[სურათი:Lepota.jpg|thumb|250px|ხარების ხატი წმ. კლიმენტის ეკლესიიდან [[ოხრიდი|ოხრიდში]].]]
 '''ხარება''', [[ქრისტიანობა|ქრისტიანულ]] ეკლესიაში ერთ-ერთი საუფლო დღესასწაული (უძრავი), აღინიშნება [[25 მარტი|25 მარტს]] ძველი სტილით ([[7 აპრილი]] ახალი სტილით). [[სახარება|სახარების]] (ლუკა 1,28-35) მიხედვით, [[გაბრიელ მთავარანგელოზი|გაბრიელ მთავარანგელოზს]] უხარებია [[მარიამ ღვთისმშობელი|მარიამ ღვთისმშობლისათვის]], რომ მისგან იშვებოდა [[იესო ქრისტე]], ძე [[ღმერთი|ღვთისა]]. 
 
 
