--- a/რევაზ_დოღონაძე.mw
+++ b/რევაზ_დოღონაძე.mw
@@ -1,3 +1,15 @@
-[[Image:RevazDogonadze5.gif|thumb|Revaz Dogonadze]]
+[[Image:RevazDogonadze5.gif|thumb|რევაზ დოღონაძე]]
 
-რევაზ გოღონაძე (21 ნოემბერი, [[1931]] - 13 მაისი, [[1985]]) არის ღვაწლმოსილი ქართველი მეცნიერი, ქვანტუეი ელექტროქიმიის ერთერთი დამფუძნებელი, ელემენტარული ქიმიური რეაქციის, პოლარულ სითხეში ელექტრო-ქიმიური და ბიო-ქიმიური პროცესების კინეტიკის ქვანტური მექანიკის თეორიის ავტორი, საქართველოს მეცნიერებათა აკადემიის წევრ-კორესპონდენტი, ფიზიკისა და მათემატიკის მეცნიერებათა დოქტორი, პროფესორი. იგი დაიბადა 1931 წელს, ქ. თბილისში,  აგრარულ მეცნერებათა დოქტორის, პროფესორის [[რომან დოღონაძის]] (1905-1970) ოჯახში.
+'''რევაზ დოღონაძე''' (* [[21 ნოემბერი]], [[1931]], [[თბილისი]] ―   †  [[13 მაისი]], [[1985]]) არის ღვაწლმოსილი ქართველი მეცნიერი, ქვანტუეი ელექტროქიმიის ერთერთი დამფუძნებელი, ელემენტარული ქიმიური რეაქციის, პოლარულ სითხეში ელექტრო-ქიმიური და ბიო-ქიმიური პროცესების კინეტიკის ქვანტური მექანიკის თეორიის ავტორი, საქართველოს მეცნიერებათა აკადემიის წევრ-კორესპონდენტი, ფიზიკისა და მათემატიკის მეცნიერებათა დოქტორი, პროფესორი. 
+
+==ბიოგრაფია==
+იგი დაიბადა 1931 წელს, ქ. თბილისში,  აგრარულ მეცნერებათა დოქტორის, პროფესორის [[დოღონაძე, რომან|რომან დოღონაძის]] (1905-1970) ოჯახში.
+
+
+
+
+[[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი ქიმიკოსები]]
+[[კატეგორია:ქართველი მეცნიერები]]
+[[კატეგორია:დაბადებული  1931]]
+[[კატეგორია:გარდაცვლილი 1985]]
