--- a/ვაშინგტონ_პოსტი_(გაზეთი).mw
+++ b/ვაშინგტონ_პოსტი_(გაზეთი).mw
@@ -10,6 +10,7 @@
 * [http://www.washingtonpost.com ოფიციალური ვებგვერდი]
 * [http://washpost.com/gen_info/history/timeline/index.shtml ვაშინგტონ პოსტის ისტორიის ქრონოლოგია]
 
+{{აშშ}}
 [[კატეგორია:ამერიკის მასმედია]]
 
 [[da:The Washington Post]]
