*Empty MediaWiki Message*

--- a/სოული.mw
+++ b/სოული.mw
@@ -1,6 +1,6 @@
 '''სოული''' (ინგ. Soul - სული) კომბინაციაა რითმ-ენდ-ბლიუზისა და [[გოსპელი|გოსპელის]], რომელიც გვიანდელ 1950-იანებში ჩაისახა [[აშშ]]-ში. თავად [[რითმ-ენდ-ბლიუზი]] (ტერმინი პირველად გამოიყენა მწერალმა და პროდიუსერმა ჯერი ვექსლერმა) კომბინაციაა [[ბლუზი|ბლუზისა]] და [[ჯაზი|ჯაზის]] და წამოვიდა 1940-იან წლებში მცირე ჯგუფებისგან, რომლებიც [[საქსოფონი|საქსოფონზე]] უკრავდნენ ბლიუზის ტრადიციების გავლენით. სოულისთვის დამახასიათებელია გოსპელის ინსტრუმენტების გამოყენება, აქცენტი ვოკალურ შესრულებაზე და რელიგიური და სეკულარული თემების შერწყმა. 
 
-{{ესკიზი}}
+{{მუსიკა}}
 
 [[კატეგორია:მუსიკის ჟანრები]]
 
