/* 1960-იანებიდან გვიანდელ 70-იან წლებამდე */

--- a/ელექტრონული_მუსიკა.mw
+++ b/ელექტრონული_მუსიკა.mw
@@ -28,7 +28,7 @@
 მას შემდეგ, რაც ელექტრონული ხმოვანება უფრო ხშირი გახდა პოპულარული ჩანაწერებისთვის, სხვა მეცნიერულ-ფანტასტიკური ჟანრის ფილმებმაც დაიწყეს მაყურებელთა ემოციებზე ზეგავლენის მოსახდენად ელექტრონული მუსიკის და ელექტრონულად მიღებული ხმოვანი ეფექტების გამოყენება. მალევე, სხვა პოპ ჯგუფებთან ერთად ელექტრონული ჯგუფების დაქირევებაც დაიწყეს სპეციალურად ფილმებისთვის საუნდტრეკების ჩასაწერად.
 
 
-[[კატეგორია:მუსიკა]]
+[[კატეგორია:მუსიკის ჟანრები]]
 [[კატეგორია:ელექტრონული მუსიკა]]
 [[კატეგორია:დიჯეები]]
 
