*Empty MediaWiki Message*

--- a/შაურმა.mw
+++ b/შაურმა.mw
@@ -1,7 +1,7 @@
 [[სურათი:Döner kebab slicing.jpg|thumb|შაურმის აჭრა]]
 '''შაურმა''' (არაბ.: شاورما ), აცრ '''შავერმა''', '''შვარმა''', '''შოარმა''' თურქული სიტყვიდან çevirme (იკითხ. "ჩევირმე", ნიშნავს "მოტრიალე", დროთაგანმავლობაში არაბული ზეგავლინით "შავერმე"-დ გადაკეთდა), ახლო აღმოსავლეთიდან წამოსული კერძია, რომელიც მზადდება ცეცხლზე ვერტიკალურად მოტრიალე შამფურზე აცმული სანალებლებით გაჯერებული ხორცის წვრილი ნაჭრებისგან (როგორც წესი ცხვრის ან ქათმის). ემსგავსება ბერძნულ [[გიროს]] და მექსიკურ [[ტაკო]] ალ პასტორს. გემოვნების მიხედვით ამატებენ ცოტაოდენ ღვინის ძმარს, პილპილსა და ხმელ სანელებლებს.
 
-{{ესკიზი}}
+{{კულინარია}}
 
 [[კატეგორია:თურქული სამზარეულო]]
 [[კატეგორია:ახლო აღმოსავლეთის სამზარეულო]]
