--- a/თბილისის_სახელმწიფო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_უნივერსიტეტი.mw
@@ -5,7 +5,9 @@
 
 თსუ-ს ახლო მეცნიერული და საგანმანათლებლო კონტაქტები აქვს მსოფლიოს მრავალ უნივერსიტეტთან და სასწავლო ცენტრთან.
 
-უნივერსიტეტის მთავარი დამფუძნებელი იყო ცნობილი ქართველი ისტორიკოსი და აკადემიკოსი [[ჯავახიშვილი, ივანე|ივანე ჯავახიშვილი]]. თანადამფუძნებლები იყვნენ ასევე [[ახვლედიანი, გიორგი|გიორგი ახვლედიანი]], [[ნუცუბიძე, შალვა|შალვა ნუცუბიძე]], [[უზნაძე, დიმიტრი|დიმიტრი უზნაძე]], [[წერეთელი, გრიგოლ|გრიგოლ წერეთელი]], [[შანიძე, აკაკი|აკაკი შანიძე]], [[რაზმაძე, ანდრია|ანდრია რაზმაძე]], [[ყიფშიძე, იოსებ|იოსებ ყიფშიძე]], [[მელიქიშვილი, პეტრე|პეტრე მელიქიშვილი]] და [[თაყაიშვილი, ექვთიმე|ექვთიმე თაყაიშვილი]]. პეტრე მელიქიშვილი, ცნობილი ქართველი ქიმიკოსი, არჩეულ იქნა უნივერსიტეტის პირველ რექტორად. 2004 წლიდან თსუ-ს რექტორად [[ლორთქიფანიძე, რუსუდან|რუსუდან ლორთქიფანიძე]] დაინიშნა.
+უნივერსიტეტის მთავარი დამფუძნებელი იყო ცნობილი ქართველი ისტორიკოსი და აკადემიკოსი [[ჯავახიშვილი, ივანე|ივანე ჯავახიშვილი]]. თანადამფუძნებლები იყვნენ ასევე [[ახვლედიანი, გიორგი|გიორგი ახვლედიანი]], [[ნუცუბიძე, შალვა|შალვა ნუცუბიძე]], [[უზნაძე, დიმიტრი|დიმიტრი უზნაძე]], [[წერეთელი, გრიგოლ|გრიგოლ წერეთელი]], [[შანიძე, აკაკი|აკაკი შანიძე]], [[რაზმაძე, ანდრია|ანდრია რაზმაძე]], [[ყიფშიძე, იოსებ|იოსებ ყიფშიძე]], [[მელიქიშვილი, პეტრე|პეტრე მელიქიშვილი]] და [[თაყაიშვილი, ექვთიმე|ექვთიმე თაყაიშვილი]]. პეტრე მელიქიშვილი, ცნობილი ქართველი ქიმიკოსი, არჩეულ იქნა უნივერსიტეტის პირველ რექტორად. 
+
+2004 წლიდან თსუ-ს რექტორი [[ლორთქიფანიძე, რუსუდან|რუსუდან ლორთქიფანიძე]] იყო. 2006 წლის აპრილიდან კი იგი ამ თანამდებობაზე [[ხუბუა, გიორგი|გიორგი ხუბუამ]] შეცვალა.
 
 ==რესეურსები ინტერნეტში==
 *[http://www.tsu.ge თსუ-ს ოფიციალური ვებ-გვერდი]
