*Empty MediaWiki Message*

--- a/ალბერ_კამიუ.mw
+++ b/ალბერ_კამიუ.mw
@@ -1,4 +1,4 @@
-[[სურათი:Camus-albert.gif|thumb|220px|ალბერ კამიუ]]
+[[სურათი:Albert Camus.jpg|thumb|220px|ალბერ კამიუ]]
 '''ალბერ კამიუ''' (Albert Camus) ([[7 ნოემბერი]], [[1913]] - [[4 იანვარი]], [[1960]]) იყო [[ფრანგები|ფრანგი]] მწერალი და ფილოსოფოსი, [[აბსურდიზმი|აბსურდიზმის]] ერთ-ერთი ყველაზე ცნობილი მიმდევარი, ლიტერატურაში ნობელის პრემიის ერთ-ერთი ყველაზე ახალგაზრდა ლაურეატი. 
 
 ==ადრეული წლები==
@@ -39,6 +39,7 @@
 ==ბიბლიოგრაფია==
 ==რესურსები ინტერნეტში==
 
+{{ბიოგრაფია}}
 [[კატეგორია:ფრანგი მწერლები]]
 [[კატეგორია:ალჟირელი მწერლები]]
 [[კატეგორია:ფილოსოფოსები]]
