*Empty MediaWiki Message*

--- a/მანჰეტენის_ხიდი.mw
+++ b/მანჰეტენის_ხიდი.mw
@@ -8,6 +8,7 @@
 *[http://www.nyc.gov/html/dot/html/motorist/bridges.html ნიუ-იორკის ხიდები].
 *[http://www.nycfoto.com/showPage.php?albumID=170 NYCfoto.com] - მანჰეტენის ხიდის ფოტოები.
 
+{{არქიტექტურა}}
 [[კატეგორია:ნიუ-იორკის არქიტექტურა]]
 [[კატეგორია:ხიდები]]
 
