--- a/13_მაისი.mw
+++ b/13_მაისი.mw
@@ -21,7 +21,7 @@
 
 *[[1956]] : [[ფადეევი, ალექსანდრ]] - რუსი მწერალი.
 *[[1961]] : [[კუპერი, გარი]]
-
+*[[1985]] : [[დოღონაძე, რევაზ]] -  ქართველი მეცნიერი
 
 ==დღესასწაულები==
 
