*Empty MediaWiki Message*

--- a/ბრუკლინის_ხიდი.mw
+++ b/ბრუკლინის_ხიდი.mw
@@ -6,6 +6,7 @@
 
 ხიდის პროექტი ეკუთვნის არქიტექტურულ ფირმას, რომლის მფლობელი ჯონ აუგუსტუს როულინგი იყო [[ტრენტონი|ტრენტონიდან]], [[ნიუ-ჯერსი]]. როულინგმა საკუთარ ფირმასთან ერთად მანამდე რამდენიმე მცირე ზომის დაკუდული ხიდი ააგო ([[ცინცინატი|ცინცინატიში]], [[ოჰაიო]] და ვაკოში, [[ტექსასი]]) რომელიც ბრუკლინის ხიდის საინჟინრო პროტოტიპები იყო.
 
+{{არქიტექტურა}}
 [[კატეგორია:ხიდები]]
 [[კატეგორია:ნიუ-იორკის არქიტექტურა]]
 
