*Empty MediaWiki Message*

--- a/ნიუ-იორკის_სააქციო_ბირჟა.mw
+++ b/ნიუ-იორკის_სააქციო_ბირჟა.mw
@@ -2,7 +2,8 @@
 
 ნიუ-იორკის სააქციო ბირჟის სავაჭრო დარბაზი მდებარეობს #11 [[უოლ სტრიტი|უოლ სტრიტზე]] და შედგება ხუთი ოთახისგან, რომელიც ვაჭრობის განხორციელებისთვის გამოიყენება. მთავარი შენობა მდებარეობს #18 ბროუდ სტრიტზე, უილ სტრიტისა და ექსჩეინჯ პლეისის კუთხეში, [[ქვემო მანჰეტენი|ქვემო მენჰეტენზე]], [[ნიუ-იორკი]].
 
-{{ესკიზი}}
+
+{{ეკონომიკა}}
 
 [[კატეგორია:ნიუ-იორკი]]
 [[კატეგორია:სააქციო ბირჟები]]
