*Empty MediaWiki Message*

--- a/უოლტ_დისნეის_საკონცერტო_დარბაზი.mw
+++ b/უოლტ_დისნეის_საკონცერტო_დარბაზი.mw
@@ -4,9 +4,9 @@
 
 [[გერი, ფრენკ|ფრენკ გერის]] პროექტის ლითონის ფირფიტებით შემოსილი შენობა 2003 წლის 23 ოქტომბერს გაიხსნა. მიუხედავად იმისა, რომ შენობის არქიტექტურამ ურთიერთგამომრიცხავი მოსაზრებები გამოიწვია, საკონცერტო ჰოლის აკუსტიკამ საყოველთაო მოწონება დაიმსახურა.
 
-{{ესკიზი}}
+{{არქიტექტურა}}
 
-[[კატეგორია:ლოს-ანჟელესი]]
+[[კატეგორია:ლოს-ანჯელესი]]
 [[კატეგორია:დეკონსტრუქტივიზმი]]
 [[კატეგორია:არქიტექტურა]]
 
