*Empty MediaWiki Message*

--- a/როკფელერის_ცენტრი.mw
+++ b/როკფელერის_ცენტრი.mw
@@ -1,6 +1,6 @@
 [[სურათი:Rockefeller Center.jpg|thumb|250px|როკფელერის ცენტრის მოედანი ქვემო დონეზე]] 
 [[სურათი:07-21-2004 130 (Large).jpg|thumb|250px|ჯენერალ ელექტრიკის შენობა ღამით]] 
-'''როკფელერის ცენტრი''' კომპლექსია 19 კომერციული შენობისა [[ნიუ-იორკი|ნიუ-იორკში]] 48-ე და 51-ე ქუჩებს შორის. მდებარეობას [[მიდთაუნ მანჰეტენი|მიდთაუნ მანჰეტენის]] ცენტრში, მე-5 და მე-6 ავენიუების ბლოკში.
+'''როკფელერის ცენტრი''' (Rockefeller Center) კომპლექსია 19 კომერციული შენობისა [[ნიუ-იორკი|ნიუ-იორკში]] 48-ე და 51-ე ქუჩებს შორის. მდებარეობას [[მიდთაუნ მანჰეტენი|მიდთაუნ მანჰეტენის]] ცენტრში, მე-5 და მე-6 ავენიუების ბლოკში.
 
 დღევანდელი როკფელერის ცენტრი ძირითადად შენობათა ორი კომპლექსის კომბინაციაა: ერთის მხრივ ძველი [[არტ-დეკო]] საოფისე შენობები 1930-იანი წლებიდან და, მეორეს მხრივ, ოთხო საერთაშორისო სტილის ცათამბჯენები აგებული ამერიკის ავენიუს გასწვრივ 1960-70-იან წლებში.
 
