*Empty MediaWiki Message*

--- a/ალექსანდრიის_ბიბლიოთეკა.mw
+++ b/ალექსანდრიის_ბიბლიოთეკა.mw
@@ -6,6 +6,7 @@
 ==უძველესი სამყაროს სხვა ბიბლიოთეკები==
 ==რესურსები==
 
+{{განათლება}}
 [[კატეგორია:ძველი ეგვიპტე]]
 [[კატეგორია:უძველესი ბიბლიოთეკები]]
 
