*Empty MediaWiki Message*

--- a/ალექსანდრიის_შუქურა.mw
+++ b/ალექსანდრიის_შუქურა.mw
@@ -2,8 +2,8 @@
 
 მოგვიანებით, მრავალი ადრეული ისლამური [[მეჩეთი|მეჩეთის]] [[მინარეთი|მინარეთთა]] დიზაინი ფაროსის მსგავსი სამ-სექციანი პროექტით იქმნებოდა, რაც შუქურის დიდ არქიტექტურულ ზეგავლენაზე მეტყველებს.
 
-{{ესკიზი}}
-[[კატეგორია:მსოფლიო საოცრებანი]]
+{{არქიტექტურა}}
+[[კატეგორია:მსოფლიოს საოცრებები]]
 
 [[ar:منارة الإسكندرية]]
 [[bg:Александрийски фар]]
