*Empty MediaWiki Message*

--- a/პიტის_სასახლე.mw
+++ b/პიტის_სასახლე.mw
@@ -3,7 +3,7 @@
 
 მე-19 საუკუნეში პალაცო, იმხანად უდიდესი განძთსაცავი, [[ნაპოლეონ I]]-ის მიერ საყრდენ ბაზად იქნა გამოყენებული, მოგვიანებით კი როგორც გაერთიანებული იტალიის მთავრი სამეფო სასახლე. მე-20 საუკუნის დასაწყისში პალაცო მისი ქონებითურთ სახალხო საკუთრებაში გადასცა მეფე [[ვიქტორ ემანუელ III]]-მ, და შედეგად სასახლის კარები გაიხსნა საზოგადოებისთვის, როგორც ფლორენციის უდიდესი სამხატვრო გალერეა. ამჟამად რამდენიმე მცირე დანამატის გარდა მედიჩების ოჯახის განძთან ერთად სასახლეში სახალხო ბიბლიოთკაცაა.
 
-{{ესკიზი}}
+{{არქიტექტურა}}
 
 ==რესურსები ინტერნეტში==
 * [http://www.mega.it/eng/egui/monu/pitt.htm პიტის კომპლექსი]
