*Empty MediaWiki Message*

--- a/ნარიყალა.mw
+++ b/ნარიყალა.mw
@@ -3,8 +3,9 @@
 
 ციხესიმაგრე მე-4 საუკუნეში დაფუძნდა როგორც "შურისციხე". მე-7 საუკუნეში და მოგვიანებით [[დავით აღმაშენებელი|დავით აღმაშენებლის]] მიერ (1089-1125) მნიშვნელოვნად გაფართოვდა. მოგვიანებით შემოსულმა მონღოლებმა მას "ნარინ ქალა" ("მცირე ციხესიმაგრე") დაარქვეს. დღემდე მოღწეული ძირითადი გამაგრებები მე-16 და მე-17 საუკუნეებით თარიღდება. [[1827]] წელს ციხის გალავნის დიდი ნაწილი მიწისძვრამ დააზიანა და დაანგრია.
 
+{{არქიტექტურა}}
 [[კატეგორია:თბილისი]]
-
+[[კატეგორია:ქართული ისტორიული ძეგლები]]
 
 [[de:Narikala]]
 [[en:Narikala]]
