--- a/სოხუმი.mw
+++ b/სოხუმი.mw
@@ -1,4 +1,6 @@
-ქალაქი [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] დედაქალაქი და [[სოხუმის რაიონი|სოხუმის რაიონის]] ადმინისტრაციული ცენტრი. ქალაქად გამოცხადდა [[1848]] წელს. მოსახლეობა 120 ათასი ([[1991]] წ.). სოხუმი კონფლიქტამდე საქართველოს ერთ-ერთი მნიშვნელოვანი სამრეწველო, სატრანსპორტო (საზღვაო პორტი, რკინიგზის სადგური, აეროპორტი), კულტურული და საკურორტო-ტურისტული ცენტრი იყო. 
+[[სურათი:Sochumi 1915.jpg|thumb|250px|ხედი სოხუმზე, 1915 წ.]]
+[[სურათი:Suchumi.jpg|thumb|250px|სოხუმი სატელიტიდან.]]
+'''სოხუმი''' -- ქალაქი [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] დედაქალაქი და [[სოხუმის რაიონი|სოხუმის რაიონის]] ადმინისტრაციული ცენტრი. ქალაქად გამოცხადდა [[1848]] წელს. მოსახლეობა 120 ათასი ([[1991]] წ.). სოხუმი კონფლიქტამდე საქართველოს ერთ-ერთი მნიშვნელოვანი სამრეწველო, სატრანსპორტო (საზღვაო პორტი, რკინიგზის სადგური, აეროპორტი), კულტურული და საკურორტო-ტურისტული ცენტრი იყო. 
 
 1992-93 წლის რუსეთ-საქართველოს კონფლიქტის შემდეგ ქალაქმა დაკარგა თავისი მნიშვნელობა. 1993 სექტემბერს, რუსულმა ჯარმა, ადგილობრივ სომეხ  და ჩრდილო-კავკასიელ მოხალისეებთან ერთად, შტურმით აიღო სოხუმი. 
 
