*Empty MediaWiki Message*

--- a/პენსილვანიის_უნივერსიტეტი.mw
+++ b/პენსილვანიის_უნივერსიტეტი.mw
@@ -6,7 +6,9 @@
 
 პენსილვანიის უნივერსიტეტი ქვეყნის ერთ-ერთ უდიდესი ფონდების მომზიდია. ამ მხრივ ის როგორც წესი უნივერსიტეტებში უდიდეს ხუთეულშია ხოლმე. ამასთან, პენს ამერიკაში ერთ-ერთი უმსხვილესი კვლევითი პროგრამების ბაზა გააჩნია, ხარჯავს რა 700 მილიონ ამერიკულ დოლარს ყოველწლიურად.
 
+{{განათლება}}
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
+[[კატეგორია:ფილადელფია]]
 
 [[da:University of Pennsylvania]]
 [[de:University of Pennsylvania]]
