*Empty MediaWiki Message*

--- a/ბორჯომი.mw
+++ b/ბორჯომი.mw
@@ -1,10 +1,12 @@
+[[სურათი:Borjomi 2014.jpg|70px|left|ბორჯომი 2014 ლოგო]] 
 [[სურათი:Prokudin-Gorskii-48.jpg|thumb|250px|ბორჯომ-პარკი 1915 წლამდე]] 
+[[სურათი:Likani-Palais.jpg|thumb|250px|ლიკანის სასახლე]] 
 '''ბორჯომი''' ქალაქი-კურორტია აღმოსავლეთ [[საქართველო|საქართველოში]] და [[ბორჯომის რაიონი|ბორჯომის რაიონის]] ადმინისტრაციულ ცენტრს წარმოადგენს. ქალაქად [[1921]] წელს გამოცხადდა. მოსახლეობა 9,9 ათასი ([[2002]] წ.). სახელი ოფიციალურ წყაროებში XIX საუკუნეში იხსენიება. ქალაქის ადგილას XV-XVIII სს-ში იყო რამდენიმე სოფელი: ნუა, ფაფა, ჭალა. იმავე ხანებში [[ურაველი|ურავლის]] ხეობაში იყო ბორჯომის სახელით ცნობილი სოფელი. ვარაუდობენ, რომ ეს სახელი უნდა მოეტანათ [[ოსმალეთი|ოსმალეთის]] დაპყრობითი ომების შედეგად ჩამოსახლებულ ლტოლვილ მოსახლეობას.
 
 
 ბორჯომი ბალნეოლოგიური და კლიმატური კურორტია, მდებარეობს [[ბორჯომის ხეობა|ბორჯომის ხეობაში]], [[მტკვარი|მტკვრის]], გუჯარეთის წყლის და ბორჯომულას ნაპირებზე, ზღვის დონიდან 900 მ სიმაღლეზე, ბორჯომი-ხარაგაულის ეროვნული ნაკრძალის აღმოსავლეთით. აქ ხშირად ისვენებდნენ რუსეთის საიმეპერატორო ოჯახის წევრები, სახელმწიფო და კულტურის მოღვაწენი: [[გორკი, მაქსიმ|მ.გორკი]], [[ჩაიკოვსკი, პეტრე|პ.ჩაიკოვსკი]], [[სტალინი, იოსებ|ი.სტალინი]], [[დიმიტროვი, გიორგი|გ.დიმიტროვი]] და სხვები. ბორჯომში არის განთქმული მინერალური წყლების ჩამომსხმელი ქარხანა, რომელიც ამჟამად საქართველოს #1 საექსპორტო პროდუქტია. აქვეა სხვა მცირე საწარმოები და კულტურის დაწესებულებები (თეატრი, მხარეთმცოდნეობის მუზეუმი). 
 
-[[სურათი:Borjomi 2014.jpg|thumb|left|ბორჯომი 2014 ლოგო]] 
+
 ბორჯომთან ახლოს მდებარეობს სამთო-სათხილამურო ცენტრი [[ბაკურიანი]], ადგილობრივი მნიშვნელობის კურორტები: [[ცემი]], [[წაღვერი]], XIII საუკუნის მონასტერი დაბა, შუა საუკუნეების ციხე-სიმაგრეები პეტრესციხე და გოგიასციხე, ტბა [[ტაბაწყური]]. ბორჯომში არის [[ბორჯომისა და ახალქალაქის ეპარქია|ბორჯომისა და ახალქალაქის ეპარქიის]] კათედრა და რეზიდენცია.
 
 [[2005]] წლის [[22 ივნისი|22 ივნისს]] საქართველომ ბორჯომი ბაკურიანთან ერთად [[2014]] წლის [[ზამთრის ოლიმპიური თამაშები|ზამთრის ოლიმპიური თამაშების]] პრეტენდენტ ქალაქად დაასახელა.
