*Empty MediaWiki Message*

--- a/ოქსფორდის_უნივერსიტეტი.mw
+++ b/ოქსფორდის_უნივერსიტეტი.mw
@@ -6,7 +6,7 @@
 
 ოქსფორდი არის რასსელის ჯგუფის (ბრიტანეთის კვლევითი უნივერსიტეტების ქსელი, ინგ. Russel Group), კოიმბრას ჯგუფის (ევროპის წამყვან უნივერსიტეტთა ასოციაცია, [[ლათინური ენა|ლათ.]] Coimbra Group) და ასევე ევროპის კვლევითი უნივერსიტეტების ლიგის (LERU) წევრია.
 
-
+{{განათლება}}
 [[კატეგორია:დიდი ბრიტანეთის უნივერსიტეტები]]
 
 [[ar:جامعة أوكسفورد]]
