*Empty MediaWiki Message*

--- a/პარიზის_უნივერსიტეტი.mw
+++ b/პარიზის_უნივერსიტეტი.mw
@@ -18,9 +18,9 @@
 ფაკულტეტის ეკლესიასთან ახლო კავშირმა საფრანგეთის რევოლუციის დროს მისი დახურვა განაპირობა, თუმცა [[1808]] წელს ნაპოლეონის ბრძანებით მან განაახლა მუშაობა, როგორც პარიზის უნივერსიტეტის ნაწილმა. 1885 წლამდე სორბონი უნივერსიტეტის თეოლოგიის ფაკულტეტსა და პარიზის აკადემიას მოიცავდა. მე-19 საუკუნის ბოლოს სორბონი მთლიანად გაემიჯნა რელიგიას.
 
 
-
+{{განათლება}}
 [[კატეგორია:საფრანგეთის უნივერსიტეტები]]
-
+[[კატეგორია:პარიზი]]
 
 
 
