--- a/ლონდონის_ეკონომიკის_სკოლა.mw
+++ b/ლონდონის_ეკონომიკის_სკოლა.mw
@@ -12,8 +12,9 @@
 * [http://www.lsesu.com/ უნივერსიტეტის სტუდენტური გაერთიანების ვებ-გვერდი]
 *[http://www.lse.ac.uk/collections/researchAndProjectDevelopmentDivision/partnershipProgrammes/USA/Columbia/ ლონდონის ეკონ. სკოლისა და კოლუმბიის ალიანსი]
 
-
-[[კატეგორია:ლონდონის უნივერსიტეტები]]
+{{განათლება}}
+[[კატეგორია:ბრიტანეთის უნივერსიტეტები]]
+[[კატეგორია:ლონდონი]]
 
 [[de:London School of Economics and Political Science]]
 [[el:London School of Economics]]
