*Empty MediaWiki Message*

--- a/ბოლნისი.mw
+++ b/ბოლნისი.mw
@@ -1,4 +1,5 @@
-ქალაქი [[საქართველო|საქართველოში]], [[ბოლნისის რაიონი|ბოლნისის რაიონის]] ადმინისტრაციული ცენტრი. მდებარეობს მდინარე [[მაშავერა|მაშავერის]] შუა დინებაში, ზღვის დონიდან 550 მ სიმაღლეზე. XIX საუკუნის 50-იან წლებში სოფელ რატევნის მახლობლად [[გერმანელები]] ჩამოასახლეს. ამ დასახლებას ჯერ ეკატერინეფელდი ერქვა, [[1921]]-[[1943]] წლებში - ლუქსემბურგი. ქალაქად გამოცხადდა [[1921]] წელს. ამჟამად ბოლნისს უკავია ისტორიული სოფლების სატრედოს, ყორანთის და ველკეთილის ტერიტორიები. მოსახლეობა 13,8 ათასი ([[2002]] წ.). ქალაქში არის სამრეწველო საწარმოები, ჯანდაცვის, განათლებისა და კულტურის დაწესებულებები. ისტორიული ძეგლებიდან აღსანიშნავია ყორანთის ეკლესია (XIII-XIV სს.). ბოლნისში არის [[ბოლნისისა და დმანისის ეპარქია|ბოლნისისა და დმანისის ეპარქიის]] კათედრა და რეზიდენცია.
+[[სურათი:Katharinenfeld.jpg|thumb|250px|ბოლნისი 1941 წელს.]]
+'''ბოლნისი''' -- ქალაქი [[საქართველო|საქართველოში]], [[ბოლნისის რაიონი|ბოლნისის რაიონის]] ადმინისტრაციული ცენტრი. მდებარეობს მდინარე [[მაშავერა|მაშავერის]] შუა დინებაში, ზღვის დონიდან 550 მ სიმაღლეზე. XIX საუკუნის 50-იან წლებში სოფელ რატევნის მახლობლად [[გერმანელები]] ჩამოასახლეს. ამ დასახლებას ჯერ ეკატერინეფელდი ერქვა, [[1921]]-[[1943]] წლებში - ლუქსემბურგი. ქალაქად გამოცხადდა [[1921]] წელს. ამჟამად ბოლნისს უკავია ისტორიული სოფლების სატრედოს, ყორანთის და ველკეთილის ტერიტორიები. მოსახლეობა 13,8 ათასი ([[2002]] წ.). ქალაქში არის სამრეწველო საწარმოები, ჯანდაცვის, განათლებისა და კულტურის დაწესებულებები. ისტორიული ძეგლებიდან აღსანიშნავია ყორანთის ეკლესია (XIII-XIV სს.). ბოლნისში არის [[ბოლნისისა და დმანისის ეპარქია|ბოლნისისა და დმანისის ეპარქიის]] კათედრა და რეზიდენცია.
 
 [[კატეგორია:საქართველოს ქალაქები]]
 
