*Empty MediaWiki Message*

--- a/ლონდონის_ეკონომიკის_სკოლა.mw
+++ b/ლონდონის_ეკონომიკის_სკოლა.mw
@@ -1,3 +1,4 @@
+[[სურათი:London School of Economics Logo.jpg|thumb|ლონდონის ეკონომიკის სკოლის ლოგო]]
 '''ლონდონის ეკონომიკისა და პოლიტიკურ მეცნიერებათა სკოლა''', შემოკლებით  '''ლონდონის ეკონომიკის სკოლა''' (ინგ. The London School of Economics and Political Science, შემოკლ. LSE) სპეციალიზირებული უნივერსიტეტი და დაქვემდებარებული კოლეჯია ლონდონის ფედერალურ უნივერსიტეტთან, რომელიც ჰაფტონ სტრიტზე მდებარეობს ცენტრალურ ლონდონში.
 
 ==ისტორია==
