*Empty MediaWiki Message*

--- a/გუნდიშაფურის_აკადემია.mw
+++ b/გუნდიშაფურის_აკადემია.mw
@@ -1,7 +1,14 @@
+[[Image:ShapurII.jpg|frame|მეფე [[შაფურ II]]-ის თავი ([[სასანიდთა დინასტია]], მე-4 საუკუნე). მან გუნდიშაფური იმპერიის დედაქალაქი გახადა. ნიუ-იორკის მეტროპოლიტენ მუზეუმის კოლექცია.]]
 '''გუნდიშაფურის აკადემია''' (ასევე ჯონდიშაფური, გონდეშაფური) [[სასანიდთა იმპერია|სასანიდთა იმპერიის]] ინტელექტუალური ცენტრი იყო. აკადემიაში ასწავლიდნენ [[მედიცინა|მედიცინას]], [[ფილოსოფია|ფილოსოფიას]], [[თეოლოგია|თეოლოგიასა]] და [[მეცნიერება|მეცნიერებას]]. აქაური მასწავლებლები [[ზოროასტრიზმი|ზოროასტრიულ]] და სპარსულთან ერთად ბერძნულ და ინდურ ტრადიციებშიც იყვნენ განსწავლული. კემბრიჯის [[ირანის ისტორია|ირანის ისტორიის]] თანახმად, ეს იყო უძველესი სამყაროს (განისაზღვრება, როგორც [[ევროპა]], [[ხმელთაშუაზღვისპირეთი]] და [[ახლო აღმოსავლეთი]]) ყველაზე მნიშვნელოვანი სამედიცინო ცენტრი მე-6 და მე-7 საუკუნეებში.
 
 დაფუძნდა რა 271 წელს [[სასანიდთა დინასტია|სასანიდთა დინასტიის]] მმართველის მიერ, გუნდიშაფური იყო მსოფლიოში დღეისთვის ცნობილი უძველესი სასწავლო ჰოსპიტალი, რომელშიც ასევე შედიოდა ბიბლიოთეკა და უნივერსიტეტი. ის მდებარეობდა დღევანდელ ხუზისტანის პროვინციაში, ირანის სამხრეთ-დასავლეთში, მდინარე ყარუნთან ახლოს.
 
-
+{{განათლება}}
 [[კატეგორია:სპარსეთი]]
 [[კატეგორია:უძველესი განათლების კერები]]
+
+[[de:Akademie von Gundishapur]]
+[[en:Academy of Gundishapur]]
+[[fa:&#1601;&#1585;&#1607;&#1606;&#1711;&#1587;&#1578;&#1575;&#1606; &#1711;&#1606;&#1583;&#1740;&#1588;&#1575;&#1662;&#1608;&#1585;]]
+[[fi:Gundishapurin akatemia]]
+[[fr:Académie de Gundishapur]]
