*Empty MediaWiki Message*

--- a/ბოლონიის_უნივერსიტეტი.mw
+++ b/ბოლონიის_უნივერსიტეტი.mw
@@ -5,6 +5,7 @@
 *[http://www.unibo.it/ www.unibo.it] - ოფიციალური ვებ-გვერდი (იტ. და ინგ.)
 * [http://www.archiviostorico.unibo.it/ უნივერს. არქივი (იტ.)]
 
+{{განათლება}}
 [[კატეგორია:იტალიის უნივერსიტეტები]]
 
 [[de:Universität Bologna]]
