--- a/ჯონს_ჰოპკინზის_უნივერსიტეტი.mw
+++ b/ჯონს_ჰოპკინზის_უნივერსიტეტი.mw
@@ -10,7 +10,7 @@
 ==რესურსები ინტერნეტში==
 *[http://www.jhu.edu/ უნივერსიტეტის მთავარი ვებ-გვერდი]
 
-
+{{განათლება}}
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 
 [[de:Johns-Hopkins-Universität]]
