*Empty MediaWiki Message*

--- a/ჯონს_ჰოპკინზის_უნივერსიტეტი.mw
+++ b/ჯონს_ჰოპკინზის_უნივერსიტეტი.mw
@@ -1,4 +1,4 @@
-[[სურათი:JHUSeal.gif|thumb|უნივერსიტეტის ბეჭედი]] '''ჯონს ჰოპკინსის უნივერსიტეტი''' (ინგ. Johns Hopkins University) -- კერზო უმაღლესი სასწავლებელია [[ბალტიმორი|ბალტიმორში]], [[მერილენდი]], [[აშშ]]. ჯონს ჰოპკინსის ძირითადი საბაკალავრო და სამაგისტრო პროგრამები მის ჰოუმვუდ კამპუსზეა ბალტიმორში. უნივერსტიტეტს ასევე აქვს სრული დასწრების კამპუსები ვაშინგტონში, იტალიაში და ჩინეთში. ჯონს ჰოპკინს მიიჩნევენ ერთ-ერთ წამყვან კვლევით და აკადემიურ დაწესებულებად მსოფლიოში და რანგით ამერიკის ყველაზე პრესტიჟულ უნივერსიტეტთა რიგშია.
+[[სურათი:JHUSeal.gif|thumb|უნივერსიტეტის ბეჭედი]] '''ჯონს ჰოპკინსის უნივერსიტეტი''' (ინგ. Johns Hopkins University) -- კერძო უმაღლესი სასწავლებელია [[ბალტიმორი|ბალტიმორში]], [[მერილენდი]], [[აშშ]]. ჯონს ჰოპკინსის ძირითადი საბაკალავრო და სამაგისტრო პროგრამები მის ''ჰოუმვუდ კამპუსზეა'' ბალტიმორში. უნივერსტიტეტს ასევე აქვს სრული დასწრების კამპუსები ვაშინგტონში, იტალიაში და ჩინეთში. ჯონს ჰოპკინს მიიჩნევენ ერთ-ერთ წამყვან კვლევით და აკადემიურ დაწესებულებად მსოფლიოში და რანგით ამერიკის ყველაზე პრესტიჟულ უნივერსიტეტთა რიგშია.
 
 ==საეთო ინფორმაცია==
 ==სკოლები==
