*Empty MediaWiki Message*

--- a/კერტისის_მუსიკის_ინსტიტუტი.mw
+++ b/კერტისის_მუსიკის_ინსტიტუტი.mw
@@ -1,3 +1,4 @@
+[[სურათი:Curtis.gif|120px|left|კურტისის მუსიკის ინსტიტუტი]]
 '''კურტისის მუსიკის ინსტიტუტი''' (Curtis Institute of Music) - სამუსიკო სკოლაა [[ფილადელფია|ფილადელფიაში]], [[პენსილვანია]], რომელშიც ისწავლება სადიმპლომო, საბაკალავრო და სამაგისტრო კურსები მუსიკაში და პროფესიული პროგრამა საოპერო ხელოვნებაში. კურტისი [[აშშ]]-ის ერთ-ერთ წამყვან სამუსიკო [[კონსერვატორია|კონსერვატორიად]] ითვლება.
 
 დაფუძნდა [[1924]] წელს მერი ლუიზ კურტის ბოკის მიერ როგორც სარეპეტიციო/მოსამზადებელი დარბაზი ფილადელფიის ორკესტრის შემსრულებელთა რანგთა შესავსებად, [[ვენის სამუსიკო სკოლა|ვენის სამუსიკო სკოლის]] მსგავსად, რომელიც იგივე ფუნქციას ასრულებდა [[ვენის ფილარმონიის ორკესტრი|ვენის ფილარმონიისთვის]]. აქვე არსებობდა სასწავლო კურსები პიანისტებისთვის, მომღერლებისთვის, ორგანისტებისადა კომპოზიტორებისთვის.
