--- a/სტამბოლის_უნივერსიტეტი.mw
+++ b/სტამბოლის_უნივერსიტეტი.mw
@@ -11,7 +11,7 @@
 *[http://www.istanbul.edu.tr/english/ სტამბოლის უნივერსიტეტის ვებ-გვერდი]
 
 
-
+{{განათლება}}
 [[კატეგორია:თურქეთის უნივერსიტეტები]]
 [[კატეგორია:სტამბოლი]]
 
