--- a/კარლის_უნივერსიტეტი_(პრაღა).mw
+++ b/კარლის_უნივერსიტეტი_(პრაღა).mw
@@ -18,7 +18,9 @@
 ==ცნობილი კურსდამთავრებულები==
 ==ცნობილი მეცნიერ-მასწავლებლები==
 ==რესურსები ინტერნეტში==
-* [http://www.cuni.cz/UK-1628.html ოფიციალური ვებგვერდი ინგლისურად] (დამუშავების პროცესშია)
+* [http://www.cuni.cz/UK-1628.html ოფიციალური ვებგვერდი ინგლისურად] 
+
+{{განათლება}}
 
 [[კატეგორია:ჩეხეთის უნივერსიტეტები]]
 [[კატეგორია:ევროპის უძველესი უნივერსიტეტები]]
