*Empty MediaWiki Message*

--- a/ვენის_უნივერსიტეტი.mw
+++ b/ვენის_უნივერსიტეტი.mw
@@ -1,6 +1,6 @@
 [[სურათი:225px-Uni-Vienna-seal.png|thumb|ვენის უნივერსიტეტის ბეჭედი]]
 
-'''ვენის უნივერსიტეტი''' ([[გერმანული ენა|გერმ.:]]''Italic text'' Universität Wien) [[ავსტრია|ავსტრიაში]] დაფუძნდა [[1365]] წელს [[რუდოლფ IV|რუდოლფ IV-ის]] მიერ და შესაბამისად Alma Mater Rudolphina დაერქვა. ეს უდიდესი და უძველესი უნივერსიტეტია გერმანულენოვან სამყაროში (თუ არ ჩავთვლით [[პრაღის უნივერსიტეტი|პრაღის უნივერსიტეტს]], რომელიც ნაწილობრივ გერმანულენოვანი იყო). ვენის სხვა უნივესიტეტებისგან გამოსარჩევად, მას ასავე არაფორმალურად "ჰოპტუნი"-ს ("მთავარი უნივერსიტეტი") უწოდებენ.
+'''ვენის უნივერსიტეტი''' ([[გერმანული ენა|გერმ.:]] ''Universität Wien'') [[ავსტრია|ავსტრიაში]] დაფუძნდა [[1365]] წელს [[რუდოლფ IV|რუდოლფ IV-ის]] მიერ და შესაბამისად Alma Mater Rudolphina დაერქვა. ეს უდიდესი და უძველესი უნივერსიტეტია გერმანულენოვან სამყაროში (თუ არ ჩავთვლით [[პრაღის უნივერსიტეტი|პრაღის უნივერსიტეტს]], რომელიც ნაწილობრივ გერმანულენოვანი იყო). ვენის სხვა უნივესიტეტებისგან გამოსარჩევად, მას ასავე არაფორმალურად "ჰოპტუნი"-ს ("მთავარი უნივერსიტეტი") უწოდებენ.
 [[სურათი:Univie.jpg|thumb|ვენის უნივერსიტეტი]]
 
 ==ისტორია==
@@ -10,7 +10,7 @@
 *[http://www.univie.ac.at ოფიციალური ვებგვერდი] (გერმანულად და ინგლისურად)
 *[http://www.haardt.net/studyinat.htm განათლება ავსტრიაში: მეგზური]
 
-
+{{განათლება}}
 [[კატეგორია:ავსტრიის უნივერსიტეტები]]
 [[კატეგორია:ვენა]]
 
