*Empty MediaWiki Message*

--- a/თუშეთი.mw
+++ b/თუშეთი.mw
@@ -12,3 +12,5 @@
 თუშეთს ზოგჯერ მთათუშეთსაც უწოდებენ, რადგან თუშები ბარშიც სახლობენ, კერძოდ [[ახმეტის რაიონი|ახმეტისა]] და [[თელავის რაიონი|თელავის]] რაიონებში. მაგრამ “ბარის თუშეთი” სინამდვილეში კახეთია, ამიტომ ტერმინი “მთათუშეთი” არც ისტორიულადაა გამართლებელი და ვერც თანამედროვე ვითარებას ასახავს.
 
 [[კატეგორია:საქართველოს ისტორიულ-გეოგრაფიული მხარეები]]
+[[en:Tusheti]]
+[[tr:Tuşeti]]
