*Empty MediaWiki Message*

--- a/რევაზ_დოღონაძე.mw
+++ b/რევაზ_დოღონაძე.mw
@@ -9,7 +9,7 @@
 
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:ქართველი ქიმიკოსები]]
+[[კატეგორია:ქართველი ფიზიკოსები]]
 [[კატეგორია:ქართველი მეცნიერები]]
 [[კატეგორია:დაბადებული  1931]]
 [[კატეგორია:გარდაცვლილი 1985]]
