--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -1,8 +1,8 @@
 '''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' საქართველოს უნივერსიტეტთა და სკოლათა-შორისი პროგრამაა; დაარსდა [[2006]] წ. [[24 თებერვალი|24 თებერვალს]] და ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
 
 ==ორგანიზაცია==
-მნიშვნელოვანი სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია არა მარტო საწევრო და საპაიო შემონატანებით, არამედ მნიშვნელოვანი დახმარებებით პარტნიორი ორგანიზაციებიდან, საერთაშორისო ფონდებიდან, ისევე როგორც სხვადასხვა, საერთაშორისო განვითარების პროგრამებით. უახლოეს პერიოდში კავშირი მოიპოვებს წევრობას [[მსოფლიო საკრედიტო კავშირების საბჭოში]], ასევე იგეგმება თანამშრომლობის განვითარება საერთაშორისო სავალუტო ფონდის პროგრამებთან და საერთაშორისო საფინანსო კორპორაციასთან.
-განვითარებადი ქვეპროგრამების წარმატებას მნიშვნელოვანწილად განაპირობებს წევრთა მაღალი რიცხოვნობა, რომელიც მეორეს მხრივ ვერ მიიღწევა რომელიმე ერთი, თუნდაც მსხვილი უნივერსიტეტის ფარგლებში. გამომდინარე აქედან, კავშირი მიზანმიმართულად მუშაობს როგორც ძირითად ასევე სტუდენტთა რიცხოვნობით მეორად სასწავლებლებთან.
+მნიშვნელოვანი სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია არა მარტო საწევრო და საპაიო შემონატანებით, არამედ მნიშვნელოვანი დახმარებებით პარტნიორი ორგანიზაციებიდან, საერთაშორისო ფონდებიდან, ისევე როგორც სხვადასხვა, საერთაშორისო განვითარების პროგრამებით.
+განვითარებადი ქვეპროგრამების წარმატებას მნიშვნელოვანწილად განაპირობებს წევრთა მაღალი რიცხოვნობა, რომელიც მეორეს მხრივ ვერ მიიღწევა რომელიმე ერთი, თუნდაც მსხვილი უნივერსიტეტის ფარგლებში. გამომდინარე აქედან, კავშირი მიზანმიმართულად მუშაობს როგორც ძირითად ასევე, სტუდენტთა რიცხოვნობით, მეორად სასწავლებლებთან.
 
 ==წევრობა==
 დღეს კავშირის წევრობა შეუძლია საქართველოს ნებისმიერი, აკრედიტებული სასწავლებლის სტუდენტს, მიუხედავად რეგიონისა. არასრულწლოვან მოსწავლეთა ინტერესების ჩანაცვლება შესაძლებელია მშობელთა მონაწილეობით.  საკრედიტო კავშირი, როგორც მოქალაქეთა ფინანსური რესურსებით კოოპერაციის ერთერთი ფორმა, ითვალისწინებს მოქალაქეთა ინტერესების გაერთიანებას - საერთო მიზნების მისაღწევად. საწევრო გადასახადებზე და შესაბამისად წევრთა რიცხოვნობაზე ორიენტირებული ორგანიზაცია წარმატებით ვითარდება საუნივერსიტეტო და სასკოლო ჯგუფებში.
