--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -1,4 +1,6 @@
-'''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' საქართველოს უნივერსიტეტთა და სკოლათა-შორისი პროგრამაა; დაარსდა [[2006]] წ. [[24 თებერვალი|24 თებერვალს]] და ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
+'''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' 
+
+პროგრამა, [[2006]] წ. [[24 თებერვალი|24 თებერვლიდან]] ვითარდება საქართველოს სხვადასხვა უნივერსიტეტებსა და სკოლებში. როგორც არასაბანკო-სადეპოზიტო დაწესდებულება, კავშირი პრიორიტეტულად მუშაობს განათლების სექტორში დაკრედიტებისა და დაფინანსების პროექტებზე. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, უმაღლესი და საშუალო სკოლების პროფესორ-მასწავლებლებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
 
 ==ორგანიზაცია==
 მნიშვნელოვანი სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია არა მარტო საწევრო და საპაიო შემონატანებით, არამედ მნიშვნელოვანი დახმარებებით პარტნიორი ორგანიზაციებიდან, საერთაშორისო ფონდებიდან, ისევე როგორც სხვადასხვა, საერთაშორისო განვითარების პროგრამებით.
