*Empty MediaWiki Message*

--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -1,18 +1,21 @@
 '''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' 
 
-პროგრამა, [[2006]] წ. [[24 თებერვალი|24 თებერვლიდან]] ვითარდება საქართველოს სხვადასხვა უნივერსიტეტებსა და სკოლებში. როგორც არასაბანკო-სადეპოზიტო დაწესდებულება, კავშირი პრიორიტეტულად მუშაობს განათლების სექტორში დაკრედიტებისა და დაფინანსების პროექტებზე. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, უმაღლესი და საშუალო სკოლების პროფესორ-მასწავლებლებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
+პროგრამა, [[2006]] წ. [[24 თებერვალი|24 თებერვლიდან]] ვითარდება საქართველოს სხვადასხვა უნივერსიტეტებსა და სკოლებში. როგორც არასაბანკო-სადეპოზიტო დაწესდებულება, კავშირი პრიორიტეტულად მუშაობს განათლების სექტორში დაკრედიტებისა და დაფინანსების პროექტებზე. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, უმაღლესი და საშუალო სკოლების პროფესორ-მასწავლებლებს, ასევე განათლების სექტორში დასაქმებულ პირებს (მზარდი რიცხოვნობით).
 
 ==ორგანიზაცია==
-მნიშვნელოვანი სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია არა მარტო საწევრო და საპაიო შემონატანებით, არამედ მნიშვნელოვანი დახმარებებით პარტნიორი ორგანიზაციებიდან, საერთაშორისო ფონდებიდან, ისევე როგორც სხვადასხვა, საერთაშორისო განვითარების პროგრამებით.
 განვითარებადი ქვეპროგრამების წარმატებას მნიშვნელოვანწილად განაპირობებს წევრთა მაღალი რიცხოვნობა, რომელიც მეორეს მხრივ ვერ მიიღწევა რომელიმე ერთი, თუნდაც მსხვილი უნივერსიტეტის ფარგლებში. გამომდინარე აქედან, კავშირი მიზანმიმართულად მუშაობს როგორც ძირითად ასევე, სტუდენტთა რიცხოვნობით, მეორად სასწავლებლებთან.
+მნიშვნელოვანი, მაღალი მდგრადობის სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია, როგორც წევრთა შემონატანებით, ასევე მნიშვნელოვანი პარტნიორი ბიზნეს-ორგანიზაციების ფინანსური მხარდაჭერით, საერთაშორისო ფონდებისა და სხვადასხვა, საერთაშორისო განვითარების პროგრამების მონაწილეობით.
+
 
 ==წევრობა==
-დღეს კავშირის წევრობა შეუძლია საქართველოს ნებისმიერი, აკრედიტებული სასწავლებლის სტუდენტს, მიუხედავად რეგიონისა. არასრულწლოვან მოსწავლეთა ინტერესების ჩანაცვლება შესაძლებელია მშობელთა მონაწილეობით.  საკრედიტო კავშირი, როგორც მოქალაქეთა ფინანსური რესურსებით კოოპერაციის ერთერთი ფორმა, ითვალისწინებს მოქალაქეთა ინტერესების გაერთიანებას - საერთო მიზნების მისაღწევად. საწევრო გადასახადებზე და შესაბამისად წევრთა რიცხოვნობაზე ორიენტირებული ორგანიზაცია წარმატებით ვითარდება საუნივერსიტეტო და სასკოლო ჯგუფებში.
+დღეს კავშირის წევრობა ხელმისაწვდომია საქართველოს სხვადასხვა რეგიონის აკრედიტებული სასწავლებლების სტუდენტთათვის. არასრულწლოვან მოსწავლეთა ინტერესების ჩანაცვლება შესაძლებელია მშობელთა მონაწილეობით. საკრედიტო კავშირი, როგორც მოქალაქეთა ფინანსური რესურსებით კოოპერაციის ერთერთი ფორმა, ითვალისწინებს მოქალაქეთა ინტერესების გაერთიანებას - საერთო მიზნების მისაღწევად. 
 
-წევრს შესაძლებლობა ეძლევა ისარგებლოს განათლბაზე მიზნობრივი სესხებით ერთიანი ფონდიდან, აკონტროლოს საკუთარი კოოპერაციული შენატანები და საშემნახველო ანაბრები, მისსავე ინტერესებში მუშაობის პროცესში. მცირედი შენატანების და კორპორაციული შემოწირულობების გაერთიანებით, მეორეს მხრივ შესაძლებელი ხდება დაკმაყოფილდეს თითოეული წევრის მნიშვნელოვანი ინტერესები განათლებაზე მიზნობრივი სასესხო თუ სხვა პროგრამებში მონაწილეობისას.
+წევრს შესაძლებლობა ეძლევა ისარგებლოს განათლბაზე მიზნობრივი სესხებით ერთიანი ფონდიდან, აკონტროლოს საკუთარი კოოპერაციული შენატანები და საშემნახველო ანაბრები, ამ რესურსის მისსავე ინტერესებში მუშაობის პროცესში. მცირედი შენატანების და კორპორაციული შემოწირულობების გაერთიანებით, მეორეს მხრივ შესაძლებელი ხდება დაკმაყოფილდეს თითოეული წევრის მნიშვნელოვანი ინტერესები განათლებაზე მიზნობრივი სასესხო თუ სხვა პროგრამებში მონაწილეობისას.
+
+წევრთა განათლების ფინანსური მხარდაჭერის პროგრამებთან ერთად, დღეს წარმატებიტ ვითარდება სტუდენტთა შეთავსებით დასაქმების პროგრამა.
 
 ==დანიშნულება==
-საკრედიტო კავშირი არის სახალხო ორგანიზაცია. იგი იღწვის მხოლოდ მისი წევრებისთვის. საკრედიტო კავშირი არის არა-პოლიტიკური და არა-რელიგიური ორგანიზაცია. აქ რეალიზდება მხოლოდ წევრთა ეკონომიკური უფლებები. საკრედიტო კავშირებისთვის დამაახასიათებელია საშემნახველო ანაბრების მაღალი დაცულობა, რომელიც მიიღწევა შესაბამისი სარეზერვო ფონდების ფორმირებით. პრინციპი ერთი ყველასათვის და ყველა ერთისათვის, საუკეთესოდ ასახავს საკრედიტო კავშირის იდეოლოგიას. თითოეულის მიერ მიღწეული შედეგი გუნდური გამარჯვებაა. აქ ნათლად ჩანს, რომ უდიდესი ძალა მართლაც ერთობაშია, რომელშიც იგულისხმება არა მარტო ფინანსური, არამედ პროფესიონალური, შრომითი და სხვა მნიშვნელოვანი რესურსების გაერთიანება.
+საკრედიტო კავშირი არის სახალხო ორგანიზაცია. იგი იღწვის მხოლოდ მისი წევრებისთვის. საკრედიტო კავშირი არის არა-პოლიტიკური და არა-რელიგიური ორგანიზაცია. აქ რეალიზდება წევრთა ეკონომიკური უფლებები. საკრედიტო კავშირებისთვის დამაახასიათებელია საშემნახველო ანაბრების მაღალი დაცულობა, რომელიც მიიღწევა შესაბამისი სარეზერვო ფონდების ფორმირებით. პრინციპი ერთი ყველასათვის და ყველა ერთისათვის, საუკეთესოდ ასახავს საკრედიტო კავშირის იდეოლოგიას. თითოეულის მიერ მიღწეული შედეგი გუნდური გამარჯვებაა. აქ ნათლად ჩანს, რომ უდიდესი ძალა მართლაც ერთობაშია, რომელშიც იგულისხმება არა მარტო ფინანსური, არამედ პროფესიონალური, შრომითი და სხვა მნიშვნელოვანი რესურსების გაერთიანება.
 
 ==რესურსები ინტერნეტში==
 * [http://www.creditunion.ge ოფიციალური ვებ-გვერდი]
