--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -9,9 +9,7 @@
 
 ==წევრობა==
 დღეს კავშირის წევრობა ხელმისაწვდომია საქართველოს სხვადასხვა რეგიონის აკრედიტებული სასწავლებლების სტუდენტთათვის. არასრულწლოვან მოსწავლეთა ინტერესების ჩანაცვლება შესაძლებელია მშობელთა მონაწილეობით. საკრედიტო კავშირი, როგორც მოქალაქეთა ფინანსური რესურსებით კოოპერაციის ერთერთი ფორმა, ითვალისწინებს მოქალაქეთა ინტერესების გაერთიანებას - საერთო მიზნების მისაღწევად. 
-
-წევრს შესაძლებლობა ეძლევა ისარგებლოს განათლბაზე მიზნობრივი სესხებით ერთიანი ფონდიდან, აკონტროლოს საკუთარი კოოპერაციული შენატანები და საშემნახველო ანაბრები, ამ რესურსის მისსავე ინტერესებში მუშაობის პროცესში. მცირედი შენატანების და კორპორაციული შემოწირულობების გაერთიანებით, მეორეს მხრივ შესაძლებელი ხდება დაკმაყოფილდეს თითოეული წევრის მნიშვნელოვანი ინტერესები განათლებაზე მიზნობრივი სასესხო თუ სხვა პროგრამებში მონაწილეობისას.
-
+წევრს შესაძლებლობა ეძლევა ისარგებლოს განათლბაზე მიზნობრივი არასაბანკო სესხებით ერთიანი ფონდიდან, აკონტროლოს საკუთარი კოოპერაციული შენატანები და საშემნახველო ანაბრები, ამ რესურსის მისსავე ინტერესებში მუშაობის პროცესში. მცირედი შენატანების და კორპორაციული შემოწირულობების გაერთიანებით, მეორეს მხრივ შესაძლებელი ხდება დაკმაყოფილდეს თითოეული წევრის მნიშვნელოვანი ინტერესები განათლებაზე მიზნობრივი სასესხო თუ სხვა პროგრამებში მონაწილეობისას.
 წევრთა განათლების ფინანსური მხარდაჭერის პროგრამებთან ერთად, დღეს წარმატებიტ ვითარდება სტუდენტთა შეთავსებით დასაქმების პროგრამა.
 
 ==დანიშნულება==
