*Empty MediaWiki Message*

--- a/დიმიტრი_უზნაძე.mw
+++ b/დიმიტრი_უზნაძე.mw
@@ -10,7 +10,7 @@
 
 გარაიცვალა თბილისში. დაკრძალულია თსუ-ს ბაღში.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 ==რესურსები ინტერნეტში==
 * [http://www.acnet.ge/psycho.htm უზნაძის ფსიქოლოგიის ინსტიტუტი]
 * [http://www.tsu.edu.ge თბილისის სახ. უნივერსიტეტი]
