*Empty MediaWiki Message*

--- a/შალვა_ნუცუბიძე.mw
+++ b/შალვა_ნუცუბიძე.mw
@@ -8,7 +8,7 @@
 
 გარდაიცვალა თბილისში. დაკრძალულია თსუ-ს ბაღში.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 [[კატეგორია:ქართველი ფილოსოფოსები]]
 
 [[en:Shalva Nutsubidze]]
