*Empty MediaWiki Message*

--- a/გიუსტავ_ფლობერი.mw
+++ b/გიუსტავ_ფლობერი.mw
@@ -9,9 +9,9 @@
 ==ბიბლიოგრაფია==
 
 
-
+{{ბიოგრაფია}}
 [[კატეგორია:ფრანგები]]
-[[კატეგორია:მწერლები]]
+[[კატეგორია:ფრანგი მწერლები]]
 [[კატეგორია:დაბადებული  1821]]
 [[კატეგორია:გარდაცვლილი  1880]]
 
