*Empty MediaWiki Message*

--- a/ერნესტ_ჰემინგუეი.mw
+++ b/ერნესტ_ჰემინგუეი.mw
@@ -3,9 +3,9 @@
 
 ჰემინგუეი ნაწილი იყო 1920-იანი წლების [[პარიზი|პარიზის]] უცხოელ მწერალთა პლეადის "დაკარგული თაობა", ტერმინი, რომელიც პირველად გამოიყენა და პოპულარული გახადა [[შტეინი, გერტრუდ|გერტრუდ შტეინმა]]. ის დატვირთულ სოციალურ ცხოვრებას ეწეოდა, ოთხჯერ იქორწინა, და მრავალი სასიყვარულო ურთიერთობა ჰქონია ცხოვრების მანძილზე. 
 
-ჰემინგუეის მიღებული აქვს [[პულიცერის პრიზი|პულიცერის პრემია]] (1953) და [[ნობელის პრემია]] ლიტერატურაში (1954) ნაწარმოებისთვის "მოხუცი და ზღვა". 61 წლის ასაკში სიცოცხლე თვითმკვლელობით დაასრულა 1961 წელს.
+ჰემინგუეის მიღებული აქვს [[პულიცერის პრემია]] (1953) და [[ნობელის პრემია]] ლიტერატურაში (1954) ნაწარმოებისთვის "მოხუცი და ზღვა". 61 წლის ასაკში 1961 წელს სიცოცხლე თვითმკვლელობით დაასრულა.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მწერლები]]
 [[კატეგორია:ჟურნალისტები]]
