--- a/ისააკ_ნიუტონი.mw
+++ b/ისააკ_ნიუტონი.mw
@@ -18,8 +18,7 @@
 ==ბიბლიოგრაფია==
 
 
-{{ბიოგრაფია}}
-{{თარგი:მეცნიერები}}
+{{მეცნიერები}}
 [[კატეგორია:ინგლისელები]]
 [[კატეგორია:მეცნიერები]]
 [[კატეგორია:დაბადებული  1643]]
