--- a/ტრუმენ_კაპოტე.mw
+++ b/ტრუმენ_კაპოტე.mw
@@ -6,6 +6,8 @@
 ==რესურსები==
 *[http://www.capotebio.com/ აბსტრაქტი ტრუმან კაპოტეს ბიოდან]
 
+
+{{ბიოგრაფია}}
 [[კატეგორია:ამერიკელი მწერლები]]
 
 [[ca:Truman Capote]]
