--- a/ტენესი_უილიამსი.mw
+++ b/ტენესი_უილიამსი.mw
@@ -23,9 +23,9 @@
 ==დრამატურგია (ქრონოლოგიურად)==
 
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
-[[კატეგორია:მწერლები]]
+[[კატეგორია:ამერიკელი მწერლები]]
 [[კატეგორია:დრამატურგები]]
 
 [[cs:Tennessee Williams]]
