*Empty MediaWiki Message*

--- a/ჯონ_სტეინბეკი.mw
+++ b/ჯონ_სტეინბეკი.mw
@@ -7,7 +7,7 @@
 მისი ჩვიდმეტი ნამუშავერი, მათ შორის Cannery Row (1945) და The Pearl (1947) ჰოლივუდის მიერ ეკრანიზებულ იქნა. თავად სტაინბეკმაც გაითქვა სახელი, როგორც ჰოლივუდის მწერალმა და ერთხელ ოსკარის ნომინაციაში მოხვდა საუკეთესო სცენარისთვის ალფრედ ჰიჩკოკის ფილმისთვის "Lifeboat" (1945).
 
 
-{{აშშ}}
+{{ბიოგრაფია}}
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მწერლები]]
 [[კატეგორია:ნობელის პრემია ლიტერატურის დარგში]]
