*Empty MediaWiki Message*

--- a/გი_დე_მოპასანი.mw
+++ b/გი_დე_მოპასანი.mw
@@ -1,5 +1,5 @@
 [[სურათი:180px-Maupassant 2.jpg|thumb|right|გი დე მოპასანი]]
-'''გი დე მოპასანი''' (სრული სახელი ანრი რენე ალბერ გი დე მოპასანი) (Henri René Albert Guy de Maupassant) (* [[5 აგვისტო]], [[1850]], მირომენილის ციხე-დარბაზი, ტურვილ-სიურ-არკის მახლბლად, ზღვისპირეთის სენა  ―      † [[6 ივლისი]],  [[1893]], პარიზი) - მე-19 საუკუნის პოპულარული [[ფრანგები | ფრანგი]] მწერალი, თანამედროვე  მოთხრობის სტილის ერთ-ერთი ფუძემდებელთაგანი. მისი მოთხრობები გამოირჩევა სტილის ეკონომიურობით და ლაკონური ხერხებით, რომლითაც მოვლენათა ფაბულა კულმინაციას აღწევს. მისი ზოგიერთი მოთხრობა შეიძლება საშინელებათა ისტორიების ჟანრს მივაკუთნოთ.
+'''გი დე მოპასანი''' (სრული სახელი: '''ანრი რენე ალბერ გი დე მოპასანი''') (Henri René Albert Guy de Maupassant) (* [[5 აგვისტო]], [[1850]], მირომენილის ციხე-დარბაზი, ტურვილ-სიურ-არკის მახლბლად, ზღვისპირეთის სენა  ―  † [[6 ივლისი]],  [[1893]], პარიზი) - მე-19 საუკუნის პოპულარული [[ფრანგები | ფრანგი]] მწერალი, თანამედროვე  მოთხრობის სტილის ერთ-ერთი ფუძემდებელთაგანი. მისი მოთხრობები გამოირჩევა სტილის ეკონომიურობით და ლაკონური ხერხებით, რომლითაც მოვლენათა ფაბულა კულმინაციას აღწევს. მისი ზოგიერთი მოთხრობა შეიძლება საშინელებათა ისტორიების ჟანრს მივაკუთნოთ.
 
 ==ბიოგრაფია==
 დაიბადა შატო დე მირომესნილში, დიეპთან ([[ნორმანდია]]), [[საფრანგეთი]]. მოპასანები ლორენთა ძველი გვარის შთამომავლები იყვნენ, რომლებიც ნორმანდიაში მე-18 საუკუნის შუა წლებში დასახლდნენ. მამამისმა 1848 წელს შეძლებული ბურჟუას ახალგაზრდა ქალიშვილზე, ლორა ლე პუატვენზე, იქორწინა.
@@ -43,7 +43,7 @@
 
 
 [[კატეგორია: ფრანგები]]
-[[კატეგორია:მწერლები]]
+[[კატეგორია:ფრანგი მწერლები]]
 [[კატეგორია:დაბადებული  1850]]
 [[კატეგორია:გარდაცვლილი  1893]]
 
