--- a/უილიამ_სომერსეტ_მოემი.mw
+++ b/უილიამ_სომერსეტ_მოემი.mw
@@ -21,7 +21,8 @@
 
 ==რესურსები==
 
-[[კატეგორია:მწერლები]]
+{{ბიოგრაფია}}
+[[კატეგორია:ინგლისელი მწერლები]]
 [[კატეგორია:დრამატურგები]]
 [[კატეგორია:ინგლისელები]]
 [[კატეგორია:დაბადებული  1874]] 
