*Empty MediaWiki Message*

--- a/პლუტარქე.mw
+++ b/პლუტარქე.mw
@@ -5,6 +5,8 @@
 
 მას რემდენიმე გავლენიანი მეგობარი ჰყადა, მათ შორის [[სოსკიუს სენეციო]] და [[ფუნდანუსი]], მნიშვნელოვანი სენატორები, რომელთაც პლუტარქმა რამდენიმე მისი ბოლო ნამუშევარი მიუძღვნა. თითქმის მთელი ცხოვრება მშობლიურ ქალაქ ხერონეაში გაატარა, სადაც ბერძნული ღმერთი [[აპოლონი|აპოლონის]] საიდუმლოებს ეზიარა. თუმცა მისი მოვალეობანი, როგორც [[დელფია|დელფიის]] [[ორაკული|ორაკულის]] აპოლონის ორი ღვთისმსახურის ზედამხედველისა (სადაც მას [[პითია წინასწარმეტყველი|პითიას]] წინასწარმეტყველებათა ინტერპრეტაცია ევალებოდა), მისგან დიდ დროს არ ითხოვდა - ის აქტიურ სოციალურ და საზოგადოებრივ საქმიანობას ეწეოდა და უზარმაზარი რაოდენობის ნაშრომები აქვს შექმნილი, რომელთა უმრავლესობა დღემდე მოღწეულა.
 
+
+{{ბიოგრაფია}}
 [[კატეგორია:ისტორიკოსები]]
 [[კატეგორია:ძველი ბერძნები]]
 
