*Empty MediaWiki Message*

--- a/ჰომეროსი.mw
+++ b/ჰომეროსი.mw
@@ -4,7 +4,7 @@
 გადმოცემის თანახმად ჰომეროსი ბრმა იყო. დაბადების ადგილად რამდენიმე იონიის ქალაქს მიიჩნევენ, თუმცა სხვაგვარად მისი ბიოგრაფიული მონაცემები თითქმის არ არსებობს. ზოგიერთი მკვლევარი იჭვობს, რომ ჰომეროსი შესაძლოა ნამდვილი ადამიანი არ ყოფილიყო, და რომ ეს სახელი შესაძლოა რამდენიმე ზეპირი პოეტისთვის მიეკუთვნებინათ, ტრადიციული ეპოსის გადმოცემისთვის. ასევე საკამთოა ილიადისა და ოდისეის ერთი პიროვნებაზე მიკუთვნება. სხვა ზემოთ აღნიშნულ პოემებს კი უფრო გვიანდელ პერიოდს მიაწერენ.
 
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 [[კატეგორია:ძველი ბერძნები]]
 [[კატეგორია:ძველი ბერძენი პოეტები]]
