--- a/დეზმონდ_ტუტუ.mw
+++ b/დეზმონდ_ტუტუ.mw
@@ -16,7 +16,7 @@
 
 
 
-
+{{ბიოგრაფია}}
 [[კატეგორია:სამხრეთ აფრიკელები]]
 [[კატეგორია:ნობელის პრემიის ლაურეატები]]
 [[კატეგორია:ნობელის პრემია მშვიდობის განმტკიცებისათვის]]
